test/fails/bad_functions/void1.lgl
void f() {
    return 5; // Cannot return from a void function
}

void main() {
    return;
}